# mawa

./: .gitignore  README.md  main.py  pyproject.toml
backup/config/prompt/: prompt_oap.txt  prompt_synthesis.txt
backup/config/schemas/: response_schema_synthesis.json
cli/: analyze_cli.py  data_cli.py  etl_cli.py  render_cli.py
cli/city/: bordeaux_cli.py  grenoble_cli.py  rnu_cli.py
config/: data_tree.yaml
config/prompt/: prompt.json  prompt_extract_zones.txt  prompt_refacto.txt  prompt_synthesis.txt  prompt_txt_to_json.py
config/references/: references.json
config/schemas/: response_schema_pages.json  response_schema_synthese.json  test_schema.py
docs/: pipeline.md  todo.md
docs/pipeline/: etl_transform_schema.json
src/mawa/: config.py  dataset.py  utils.py
src/mawa/analyze/: __init__.py  analyze.py  create_prompts.py
src/mawa/etl/: __init__.py  extraction.py  table_utils.py  transform.py
src/mawa/models/: __init__.py  gemini_model.py  mistral_ocr.py
src/mawa/render/: __init__.py  pdf_generator.py  utils.py
src/mawa/schemas/: __init__.py  analysis_schema.py  document_schema.py  ocr_schema.py
tests/: test_transform_clean_document.py
